style.css
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
}

body {
    background-image: url("img/drum.png");
    background-repeat: no-repeat;
    background-size: 70vh;
    background-position: center;
    background-color: #2d3d50;
    height: 100vh;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    align-items: center;
}

h1 {
    font-size: 72px;
    color: #fff;
    padding: 40px;
    text-align: center;
}

.button {
    font-size: 32px;
    color: #fff;
    background-color: #3498db;
    width: 4vw;
    padding: 25px;
    margin: 50px 8px;
    border: 1px solid #3498db;
    border-radius: 5px;
    cursor: pointer;
    transition: all .4s ease-out;
}

/* Pulse */
@keyframes pulse {
    0% {
        transform: scale(1);
    }
    50% {
        transform: scale(1.3);
        background-color: #b3e5fc;
    }
    100% {
        transform: scale(1);
    }
}

.pulse {
    animation: pulse 0.4s ease-out;
    background-color: pink;
    box-shadow: 0 0 20px;
}

/* Wiggle */
@keyframes wiggle {
    0% {
        transform: rotate(0deg);
    }
    25% {
        transform: rotate(4deg);
    }
    50% {
        transform: rotate(-4deg);
    }
    75% {
        transform: rotate(4deg);
    }
    100% {
        transform: rotate(0deg);
    }
}

.wiggle {
    animation: wiggle 0.3s ease-in-out;
}

